tests/base/invalid/SetConversion_CompileFail_1.whiley
void f({real} ls):
    out<->println(str(ls))

void System::main([string] args):
    f({1,2,3,{}})
